<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff000000"
    android:orientation="vertical"
    android:weightSum="6" >
    <!-- étage de bouton 1 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3" >
        <Button
            android:id="@+id/activity_musique_fa"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Fa"
            android:background="@color/white"
            />
        <Button
            android:id="@+id/activity_musique_do"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Do"
            android:background="@color/white"
            />
        <Button
            android:id="@+id/activity_musique_sol"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Sol"
            android:background="@color/white"
            />



        <!-- étage de bouton 2 -->
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3" >
        <Button
            android:id="@+id/activity_musique_re"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/r_m"
            android:background="@color/white"
            />
        <Button
            android:id="@+id/activity_musique_la"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/lam"
            android:background="@color/white"
            />
        <Button
            android:id="@+id/activity_musique_mi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mim"
            android:background="@color/white"
            />
    </LinearLayout>



    <!-- étage de bouton 3 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3" >
        <Button
            android:id="@+id/activity_musique_nb_loop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="0"
            android:background="@color/white"
            />
        <Button
            android:id="@+id/activity_musique_si"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sib"
            android:background="@color/white"
            />
        <Button
            android:id="@+id/activity_musique_loop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Loop"
            android:background="@color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3" >
        <Button
            android:id="@+id/activity_musique_drum"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Drum"
            android:background="@color/white"
            />
        <Button
            android:id="@+id/activity_musique_snare"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Snare"
            android:background="@color/white"
            />
        <Button
            android:id="@+id/activity_musique_hithat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="HitHat"
            android:background="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3" >
        <Button
            android:id="@+id/activity_musique_percu_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Clap"
            android:background="@color/white"
            />
        <Button
            android:id="@+id/activity_musique_percu_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Symbal"
            android:background="@color/white"
            />
        <Button
            android:id="@+id/activity_musique_percu_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Open HitHat"
            android:background="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:id="@+id/activity_musique_config"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="configuration"
            android:background="@color/colorPrimary"
            />

    </LinearLayout>
</LinearLayout>